Fixed email input clipping on g

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -61,6 +61,7 @@ input, textarea {
   font-size: 1em;
   font-family: inherit;
   resize: none;
+  line-height: 2;
 }
 
 h2 {
